# faiss

./: AutoTune.cpp  AuxIndexStructures.cpp  AuxIndexStructures.h  CMakeLists.txt  FaissAssert.h  HNSW.cpp  Heap.cpp  IVFlib.cpp  Index.cpp  Index.h  IndexBinary.cpp  IndexBinaryFlat.cpp  IndexBinaryFlat.h  IndexBinaryHNSW.cpp  IndexBinaryIVF.cpp  IndexBinaryIVF.h  IndexFlat.cpp  IndexFlat.h  IndexHNSW.cpp  IndexIVF.cpp  IndexIVF.h  IndexIVFFlat.cpp  IndexIVFFlat.h  IndexIVFPQ.cpp  IndexIVFPQ.h  IndexIVFSpectralHash.cpp  IndexPQ.cpp  IndexPQ.h  IndexScalarQuantizer.cpp  IndexScalarQuantizer.h  MetaIndexes.cpp  MetaIndexes.h  OnDiskInvertedLists.cpp  ProductQuantizer.cpp  VectorTransform.cpp  VectorTransform.h  distances.cpp  drand48.c  drand48.cpp  drand48.h  (+6 more)
demos/: demo_imi_flat.cpp  demo_ivfpq_indexing.cpp  demo_sift1M.cpp
misc/: test_blas.cpp
tests/: CMakeLists.txt  demo_imi_flat.cpp  demo_ivfpq_indexing.cpp  demo_sift1M.cpp  test_blas.cpp  test_dealloc_invlists.cpp  test_ivfpq_codec.cpp  test_lowlevel_ivf.cpp  test_merge.cpp  test_ondisk_ivf.cpp  test_pairs_decoding.cpp  test_params_override.cpp  test_sliding_ivf.cpp
tutorial/cpp/: 1-Flat.cpp  2-IVFFlat.cpp  3-IVFPQ.cpp  CMakeLists.txt
